[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vikunja-webhook-listener"
version = "0.1.0"
description = "Bridges GitHub webhooks into Vikunja tasks and Vikunja webhooks into Matrix/ntfy"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["vikunja", "webhook", "github", "matrix", "ntfy", "homelab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Bug Tracking",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/TadMSTR/vikunja-webhook-listener"
Repository = "https://github.com/TadMSTR/vikunja-webhook-listener"
Issues = "https://github.com/TadMSTR/vikunja-webhook-listener/issues"

[project.scripts]
vikunja-webhook-listener = "vikunja_webhook_listener.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vikunja_webhook_listener"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["vikunja_webhook_listener"]

[tool.coverage.report]
fail_under = 80
show_missing = true
